Fix outline visibility on body

--- a/src/manifest_v3/cheaty.css
+++ b/src/manifest_v3/cheaty.css
@@ -5,6 +5,10 @@
 
 	cursor: var(--cheaty-cursor-pen-url), auto !important;
 }
+body.cheaty-selected {
+	outline-offset: -5px;
+	outline-width: 3px;
+}
 
 #cheaty_inspector_infos_bar *,
 #cheaty_action_button_container * {
